<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color08">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color06"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/text_white_20"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/register_new_driver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_return"
            style="@style/tv_return"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="right"
            android:onClick="OnClickBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="4"
            app:layout_constraintLeft_toRightOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.2" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="OnClickBack"
            android:src="@drawable/ic_chevron_right_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_return"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color08"
        app:layout_constraintBottom_toTopOf="@id/guideline_underHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_middle">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_shape_dark_blue">

        </View>

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_underHeader"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


    <TextView
        android:id="@+id/tv_register_driver"
        style="@style/text_dark_blue_16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/back_thirty_radius_white"
        android:gravity="center"
        android:text="@string/msg_signup"
        android:translationY="-40dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_aboveEnd"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_underHeader"
        app:layout_constraintVertical_bias="0."
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_phoneNum"
        style="@style/text_black_18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:gravity="right"
        android:hint="@string/phonenum"
        android:inputType="phone"
        android:textColorHint="@color/darkGray"
        app:layout_constraintBottom_toTopOf="@id/guideline_aboveEnd"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_underHeader"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.8" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phoneNum"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_name"
        style="@style/text_black_18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:gravity="right"
        android:hint="@string/name_family"
        android:inputType="textPersonName"
        android:textColorHint="@color/darkGray"
        app:layout_constraintBottom_toTopOf="@id/guideline_aboveEnd"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintWidth_percent="0.8" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintWidth_percent="0.8" />

   <!-- <TextView
        android:id="@+id/tv_city"
        style="@style/text_dark_blue_18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/back_thirty_radius_white"
        android:drawableStart="@drawable/ic_expand_more_dark_blue_24dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/city"
        app:layout_constraintBottom_toTopOf="@id/guideline_aboveEnd"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.8" />
-->
    <TextView
        android:id="@+id/tv_upload_photo"
        style="@style/text_dark_blue_18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/back_thirty_radius_white"
        android:drawableStart="@drawable/ic_file_upload_blue_24dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/send_photo"
        app:layout_constraintBottom_toTopOf="@id/guideline_aboveEnd"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_address1"
        style="@style/text_black_18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:gravity="right"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textColorHint="@color/darkGray"
        android:lines="2"
        app:layout_constraintBottom_toTopOf="@id/guideline_aboveEnd"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_upload_photo"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.8" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_address1"
        app:layout_constraintWidth_percent="0.8" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline_aboveEnd"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color08"
        app:layout_constraintBottom_toTopOf="@id/guideline_end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_aboveEnd">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_shape_green"
            android:scaleX="-1"
            android:scaleY="-1">

        </View>

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/guideline_end">

        <TextView
            android:id="@+id/tv_register"
            style="@style/text_white_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/limit_icon_signup_bottom"
            android:drawablePadding="10dp"
            android:gravity="top"
            android:text="@string/register" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>